add room/join/members/list
