# internal/models/UserBasic.go
@@ -5,7 +5,7 @@ import "gorm.io/gorm"
 type UserBasic struct {
 	gorm.Model
 	Username string `gorm:"column:username;type:varchar(100);uniqueIndex;not null" json:"username"`
-	Password string `gorm:"column:username;type:varchar(36);not null" json:"password"`
+	Password string `gorm:"column:password;type:varchar(64);not null" json:"password"`
 	Sdp      string `gorm:"column:sdp;type:text" json:"sdp"` //sdp-p-p
 
 }
